# spare-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Makefile  Makefile.old  README.md  linux_build_and_run.sh
scripts/: testscript.lua
src/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  fps.cpp  fps.h  game_object.cpp  game_object.h  main.cpp  material.cpp  material.h  mesh.cpp  resource_loader.cpp  resource_loader.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h
src/spare/: camera.cc  camera.h  engine.cc  engine.h  game_object.cc  game_object.h  main.cc  material.cc  material.h  mesh.cc  mesh.h  mesh_data.cc  mesh_data.h  resource_loader.cc  resource_loader.h  shader.cc  shader.h  shader_program.cc  shader_program.h  spatial.cc  spatial.h  texture.cc  texture.h
src/spare/go/: camera.cc  camera.h  camera_arm.cc  camera_arm.h  go.cc  go.h  go_tree.cc  go_tree.h  mesh.cc  mesh.h  rotator.cc  rotator.h
src/spare/phiz/: aabb.cc  aabb.h  bsphere.cc  bsphere.h  intersection.h  phiz_engine.cc  phiz_engine.h  phiz_object.cc  phiz_object.h  plane.cc  plane.h
stuff/: basic_lighting.fragment  basic_lighting.vertex
